fix vertical alignment on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: baseline;
+  align-content: start;
   justify-content: center;
   border: 2px solid saddlebrown;
   background-color: #fff;
